--- a/pt/bibliografia.bib
+++ b/pt/bibliografia.bib
@@ -1,11 +1,3 @@
-@article{Abadi2012, 
- author={Abadi, D.}, 
- journal={Computer}, 
- title={Consistency Tradeoffs in Modern Distributed Database System Design: CAP is Only Part of the Story}, 
- year={2012},
- volume={45}, 
- number={2},
- pages={37-42},}
 @article{Atikoglu2012,
  author = {Atikoglu, Berk and Xu, Yuehai and Frachtenberg, Eitan and Jiang, Song
 and Paleczny, Mike},
@@ -33,7 +25,7 @@ and Paleczny, Mike},
  Lloyd and Vadim Yushprakh},
  year  = 2011,
  URL = {http://www.cidrdb.org/cidr2011/Papers/CIDR11_Paper32.pdf},
- booktitle = {Proceedings of the Conference on Innovative Data system Research
+ booktitle = {Proc. Conference on Innovative Data system Research
  (CIDR)},
  pages = {223--234}
 }
@@ -41,7 +33,7 @@ and Paleczny, Mike},
  title = {{Testing the Suitability of Cassandra for Cloud Computing Environments Consistency, Availability and Partition Tolerance}},
  author = {Beyer, Felix and Koschel, Arne and Schulz, Christian and Sch\"{a}fer, Michael and Astrova, Irina and Reich, Alexander and Grivas, Stella Gatziu and Schaaf, Marc},
  year  = {2011},
- booktitle = {Proceedings of the 2nd International Conference on Cloud
+ booktitle = {Proc. 2nd International Conference on Cloud
 Computing, GRIDs, and Virtualization},
  pages = {86-91}
 }
@@ -56,7 +48,7 @@ Adusumilli, Anitha and McNett, Marvin and Sankaran, Sriram and Manivannan,
 Kavitha and Rigas, Leonidas},
  title = {Windows Azure Storage: a highly available cloud storage service with
 strong consistency},
- booktitle = {Proceedings of the Twenty-Third ACM Symposium on Operating Systems
+ booktitle = {Proc. 23rd ACM Symposium on Operating Systems
 Principles},
  series = {SOSP '11},
  year = {2011},
@@ -74,7 +66,7 @@ Principles},
 Silberstein, Adam and Bohannon, Philip and Jacobsen, Hans-Arno and Puz, Nick and
 Weaver, Daniel and Yerneni, Ramana},
  title = {PNUTS: Yahoo!'s hosted data serving platform},
- journal = {Proc. VLDB Endow.},
+ journal = {Proc. VLDB Endowment (PVLDB)},
  issue_date = {August 2008},
  volume = {1},
  number = {2},
@@ -91,7 +83,7 @@ Weaver, Daniel and Yerneni, Ramana},
  author = {Cooper, Brian F. and Silberstein, Adam and Tam, Erwin and
 Ramakrishnan, Raghu and Sears, Russell},
  title = {Benchmarking cloud serving systems with YCSB},
- booktitle = {Proceedings of the 1st ACM symposium on Cloud computing},
+ booktitle = {Proc. 1st ACM symposium on Cloud computing},
  series = {SoCC '10},
  year = {2010},
  isbn = {978-1-4503-0036-0},
@@ -124,16 +116,16 @@ Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
  keywords = {performance, reliability, scalability},
 } 
 @misc{ESNet2012,
-title = {{Host Tuning}},
-note = "[\'Ultimo Acesso em 01/02/2013.]",
-howpublished = {\url{http://fasterdata.es.net/host-tuning/background/}}
+ title = {{Host Tuning}},
+ note = "[\'Ultimo Acesso em 01/02/2013.]",
+ howpublished = {\url{http://fasterdata.es.net/host-tuning/background/}},
+ year = {2012},
 }
 @inproceedings{Glendenning2011,
  author = {Glendenning, Lisa and Beschastnikh, Ivan and Krishnamurthy, Arvind
 and Anderson, Thomas},
  title = {Scalable consistency in Scatter},
- booktitle = {Proceedings of the Twenty-Third ACM Symposium on Operating Systems
-Principles},
+ booktitle = {Proc. 23rd ACM Symposium on Operating Systems Principles},
  series = {SOSP '11},
  year = {2011},
  isbn = {978-1-4503-0977-6},
@@ -151,7 +143,7 @@ fault tolerance, scalability, storage},
  author={Jain, Raj},
  isbn={9788126519057},
  url={http://books.google.com.br/books?id=eOR0kJjgMqkC},
- year={2008},
+ year={1991},
  publisher={Wiley}
 }
 @article{Kadambi2011,
@@ -164,7 +156,7 @@ fault tolerance, scalability, storage},
               Erwin Tam and
               Hector Garcia-Molina},
  title     = {Where in the World is My Data?},
- journal   = {Proceedings of the VLDB Endowment (PVLDB)},
+ journal   = {Proc. VLDB Endowment (PVLDB)},
  volume    = {4},
  number    = {11},
  year      = {2011},
@@ -172,30 +164,12 @@ fault tolerance, scalability, storage},
  ee        = {http://www.vldb.org/pvldb/vol4/p1040-kadambi.pdf},
  bibsource = {DBLP, http://dblp.uni-trier.de}
 }
-@article{Lakshman2010,
- author = {Lakshman, Avinash and Malik, Prashant},
- title = {Cassandra: a decentralized structured storage system},
- journal = {SIGOPS Oper. Syst. Rev.},
- issue_date = {April 2010},
- volume = {44},
- number = {2},
- month = apr,
- year = {2010},
- issn = {0163-5980},
- pages = {35--40},
- numpages = {6},
- url = {http://doi.acm.org/10.1145/1773912.1773922},
- doi = {10.1145/1773912.1773922},
- acmid = {1773922},
- publisher = {ACM},
-} 
 @inproceedings{Lloyd2011,
  author = {Lloyd, Wyatt and Freedman, Michael J. and Kaminsky, Michael and
 Andersen, David G.},
  title = {Don't settle for eventual: scalable causal consistency for wide-area
 storage with COPS},
- booktitle = {Proceedings of the Twenty-Third ACM Symposium on Operating Systems
-Principles},
+ booktitle = {Proc. 23rd ACM Symposium on Operating Systems Principles},
  series = {SOSP '11},
  year = {2011},
  isbn = {978-1-4503-0977-6},
@@ -208,13 +182,6 @@ Principles},
  keywords = {ALPS systems, causal + consistency, key-value storage, read
 transactions, scalable wide-area replication},
 } 
-@misc{Pinger2013,
- author = {Pinger},
- title = {{PingER (Ping End-to-end Reporting)}},
- howpublished = {\url{http://www-iepm.slac.stanford.edu/pinger/}},
- note = "[\'Ultimo Acesso em 01/02/2013.]",
- year = {2013}
-}
 @misc{Pujol2012,
  author = {Pujol, Josep M.},
  title = {{Having fun with Redis Replication between Amazon and Rackspace}},
@@ -222,17 +189,11 @@ transactions, scalable wide-area replication},
  note = "[\'Ultimo Acesso em 01/02/2013.]",
  year = {2012}
 }
-@misc{Riak,
- title = {{Riak}},
- note = "[\'Ultimo Acesso em 01/02/2013.]",
- howpublished = {\url{http://wiki.basho.com/Riak.html}}
-}
 @inproceedings{Sovran2011,
  author = {Sovran, Yair and Power, Russell and Aguilera, Marcos K. and Li,
 Jinyang},
  title = {Transactional storage for geo-replicated systems},
- booktitle = {Proceedings of the Twenty-Third ACM Symposium on Operating Systems
-Principles},
+ booktitle = {Proc. 23rd ACM Symposium on Operating Systems Principles},
  series = {SOSP '11},
  year = {2011},
  isbn = {978-1-4503-0977-6},
@@ -248,8 +209,7 @@ systems, key-value store, parallel snapshot isolation, transactions},
 @inproceedings{vanRenesse2004,
  author = {van Renesse, Robbert and Schneider, Fred B.},
  title = {Chain replication for supporting high throughput and availability},
- booktitle = {Proceedings of the 6th conference on Symposium on Opearting
-Systems Design \& Implementation - Volume 6},
+ booktitle = {Proc. 6th Symposium on Operating Systems Design \& Implementation},
  series = {OSDI'04},
  year = {2004},
  location = {San Francisco, CA},
@@ -261,7 +221,7 @@ Systems Design \& Implementation - Volume 6},
 @article{Vogels2009,
  author = {Vogels, Werner},
  title = {Eventually consistent},
- journal = {Commun. ACM},
+ journal = {Communications of ACM},
  issue_date = {January 2009},
  volume = {52},
  number = {1},
